[project]
name = "gymtime"
version = ""
description = ""
authors = [
    {name = "ninest", email = "parth.kabra@gmail.com"},
]
dependencies = [
    "black>=22.12.0",
    "sqlmodel>=0.0.8",
    "pytest>=7.2.0",
]
requires-python = ">=3.8"
license = {text = "MIT"}

[tool.pdm.scripts]
db-create = {call = "gymtime.database.create:main"}
db-test-drop-all = {call = "gymtime.database.drop_all:main"}
db-test-seed = {call = "gymtime.database.seed:main"}
test = "pytest tests -s"

[build-system]
requires = ["pdm-pep517>=1.0.0"]
build-backend = "pdm.pep517.api"
