[project]
name = "gymtime"
version = ""
description = ""
authors = [
    {name = "ninest", email = "parth.kabra@gmail.com"},
]
dependencies = [
    "black>=22.12.0",
    "sqlmodel>=0.0.8",
    "pytest>=7.2.0",
    "bs4>=0.0.1",
    "requests>=2.28.1",
]
requires-python = ">=3.8"
license = {text = "MIT"}

[tool.pdm.scripts]
db-create = {call = "gymtime.database.create:main"}
db-dev-drop-all = {call = "gymtime.database.dev.drop_all:main"}
db-dev-seed = {call = "gymtime.database.dev.seed:main"}
test = "pytest tests -s"

[build-system]
requires = ["pdm-pep517>=1.0.0"]
build-backend = "pdm.pep517.api"
