[project]
name = "gymtime"
version = "0.0.1"
description = ""
authors = [
    {name = "ninest", email = "parth.kabra@gmail.com"},
]
dependencies = [
    "black>=22.12.0",
    "sqlmodel>=0.0.8",
    "pytest>=7.2.0",
    "bs4>=0.0.1",
    "requests>=2.28.1",
    "python-dotenv>=0.21.0",
    "mysqlclient>=2.1.1",
    "backports.zoneinfo>=0.2.1",
    "sqlalchemy-libsql>=0.1.0",
]
requires-python = ">=3.8"
license = {text = "MIT"}

[tool.pdm.scripts]
db-create = {call = "gymtime.database.create:main"}
db-drop-all = {call = "gymtime.database.seed.drop_all:main"}
db-seed-gyms = {call = "gymtime.database.seed.seed_gyms:main"}
db-seed-test-data = {call = "gymtime.database.seed.seed_test_data:main"}
test = "pytest tests -s"

[build-system]
requires = ["pdm-pep517>=1.0.0"]
build-backend = "pdm.pep517.api"
